--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         <div class="row" style="height:100%">
             <div class="col">
                 <h1>Monster Maker JSON Format</h1>
+            
                 <textarea id="monster-maker" style="width:100%;height:100%"></textarea>
+                <br/>
+                <button id="convert-btn">Convert</button>
             </div>
             <div class="col">
                 <h1>5etools</h1>
-                <textarea id="5e-tools" style="width:100%;height:100%"></textarea>
+                <textarea id="converted" style="width:100%;height:100%"></textarea>
             </div>
         </div>
     </div>
@@ -32,5 +35,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src='parse-monster-maker-html.js'></script>
     <script src="index.js"></script>
+    <script>
+        $('#convert-btn').click(function(){
+            let monsterHTML = $('#monster-maker').val();
+            let converted = parseHTMLStatBlock(monsterHTML);
+            $('#converted').val(converted);
+        });
+     
+    </script>
   </body>
 </html>
